--- a/world.html
+++ b/world.html
@@ -17,7 +17,7 @@
                     zoom: 12,
                     center: new google.maps.LatLng(40.758904, -73.985128)
               };
-              map = new google.mapsMap(document.getElementById('map_canvas'), mapOptions);
+              map = new google.maps.Map(document.getElementById('map_canvas'), mapOptions);
         }
         google.maps.event.addDomListener(window,'load',initialize);
         </script>
