--- a/world.html
+++ b/world.html
@@ -7,16 +7,16 @@
             HELLO WORLD!!
         </title>
         <meta name="viewport" content="initial scale=1.0, user-scalable=no">
-        <meta charset="uf-8">
+        <meta charset="utf-8">
         <style> html,body, #map_canvas { height:100%; margin:0px; padding:0px} </style>
         <script src=" https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCZd2qZyVseJPM0mZb9FFj8elwXIvdroL4"></script>
         <script>
-        var map;
-        function initialize() {
-              var mapOptions = {
+                var map;
+                function initialize() {
+                var mapOptions = {
                     zoom: 12,
                     center: new google.maps.LatLng(40.758904, -73.985128)
-              };
+                };
               map = new google.maps.Map(document.getElementById('map_canvas'), mapOptions);
         }
         google.maps.event.addDomListener(window,'load',initialize);
